[tapocontrol] new tapo klap-protocol integration
complete code revision

Signed-off-by: Christian Wild <christian@wildclan.de>